refactor(ModuleBootstrapService): replace collect with toList for improved readability